...
    <string name="automation_add">Add</string>
    <string name="automation_type_add_tag">Add a tag on entering</string>
    <string name="automation_type_add_my_day">Add to My Day on entering</string>
    <string name="automation_type_set_due">Set due date on entering</string>
    <string name="automation_type_sweep">Remove completed from My Day daily</string>
    <string name="automation_type_stale">Badge stale tasks</string>
    <string name="automation_broken">This rule points at something that no longer exists</string>
    <string name="automation_inbox_label">Inbox</string>
    <plurals name="automation_due_in_days">
        <item quantity="one">Due in %1$d day</item>
        <item quantity="other">Due in %1$d days</item>
    </plurals>
    <plurals name="automation_after_days">
...
